force-app/main/default/objects/Application__c/fields/Calculated_Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Annual_Salary__c</fullName>
    <formula>Hourly_Rate__c * 2080</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>