force-app/main/default/objects/Application__c/fields/Calculated_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Hourly_Rate__c</fullName>
    <formula>Annual_Salary__c / 2080</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Hourly Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>