force-app/main/default/objects/Application__c/fields/Contact_At_Hiring_Company__c.field-meta.xml
<CustomField>
    <fullName>Contact_At_Hiring_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact At Hiring Company</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Contact At Hiring Company)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>