force-app/main/default/objects/Application__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>Contract-to-hire</fullName>
            </value>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>W2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>