force-app/main/default/objects/Application__c/fields/Hiring_Company__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>