force-app/main/default/objects/Application__c/fields/Hiring_Manager_Date__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager_Date__c</fullName>
    <description>When Job Path changes to &quot;Hiring Manager&quot;</description>
    <label>Hiring Manager Date</label>
    <type>Date</type>
</CustomField>