force-app/main/default/objects/Application__c/fields/Job_Path__c.field-meta.xml
<CustomField>
    <fullName>Job_Path__c</fullName>
    <label>Job Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Application</fullName>
                <default>true</default>
                <label>Send Application</label>
            </value>
            <value>
                <fullName>Recruiters</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Technical/Cultural</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>