force-app/main/default/objects/Application__c/fields/Job_Post_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Post_Link__c</fullName>
    <label>Job Post Link</label>
    <type>Url</type>
</CustomField>