force-app/main/default/objects/Application__c/fields/Recruiters_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruiters_Date__c</fullName>
    <description>When Job Path changes to &quot;Recruiters&quot;</description>
    <label>Recruiters Date</label>
    <type>Date</type>
</CustomField>