force-app/main/default/objects/Application__c/fields/Recruiting_Company__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiting Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Recruiting Company)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>