force-app/main/default/objects/Application__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral</label>
    <length>50</length>
    <type>Text</type>
</CustomField>