force-app/main/default/objects/Application__c/fields/Send_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Application_Date__c</fullName>
    <description>When Job Path changes to &quot;Send Application&quot;</description>
    <label>Send Application Date</label>
    <type>DateTime</type>
</CustomField>