force-app/main/default/objects/Application__c/fields/Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail__c</fullName>
    <label>Source Detail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>