force-app/main/default/objects/Application__c/fields/Technical_Cultural__c.field-meta.xml
<CustomField>
    <fullName>Technical_Cultural__c</fullName>
    <description>When Job Path = Technical/Cultural</description>
    <label>Technical/Cultural</label>
    <type>Date</type>
</CustomField>