force-app/main/default/objects/Application__c/fields/Technical_Cultural_Date__c.field-meta.xml
<CustomField>
    <fullName>Technical_Cultural_Date__c</fullName>
    <description>When Job Path changes to &quot;Technical/Cultural&quot;</description>
    <label>Technical/Cultural Date</label>
    <type>Date</type>
</CustomField>